[tool.poetry]
name = "hashfunction"
version = "0.1.0"
description = ""
authors = ["Attica-oss <g.mounac@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "1.5.0"
cryptography = "^43.0.0"
pyargon2 = "^1.0.7"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.1"
black = {version = "^24.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
